# m-pesa-txt-screencap

./: .gitignore  README.md  app.py  package.json  pyproject.toml  serverless.yml
templates/: base.html  upload.html
